<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Global text -->
    <string name="app_name">CentChat</string>
    <string name="action_settings">Settings</string>
    <string name="profile_page">Profile</string>
    <string name="headerDesc">The image is a header for the CentChat application.</string>

    <!-- Chat screen text -->
    <string name="chat_btnSend_text">Send</string>
    <string name="chat_chatHeader_text">Welcome to CentChat!</string>
    <string name="chat_entryHint_text">Type a message here..</string>
    <string name="chat_activity_title">CentChat</string>

    <!-- Login screen text -->
    <string name="login_username_text">Username</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_rememberMe_text">Remember Me</string>
    <string name="login_loginButton_text">LOGIN</string>
    <string name="login_activity_title">Login Form</string>

    <!-- Registration screen text -->
    <string name="register_username_text">Username</string>
    <string name="register_email_text">Email</string>
    <string name="register_nickname_text">Nickname</string>
    <string name="register_password_text">Password</string>
    <string name="register_password_check_text">Confirm Password</string>
    <string name="register_submit_text">SIGN UP</string>
    <string name="register_activity_title">Registration Form</string>

    <!-- Launch screen text -->
    <string name="launch_header_text">CENTCHAT</string>
    <string name="launch_logo_text">Meet and connect new people</string>
    <string name="launch_btnsignup_text">Sign Up</string>
    <string name="launch_btnLoginp_text">Login</string>

    <!-- Main screen text -->
    <string name="main_header_text">CENTCHAT</string>
    <string name="main_logo_text">Meet and connect new people</string>
    <string name="main_btnenter_text">Enter</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Profile screen text -->
    <string name="editProfile_text">Edit</string>
    <string name="statusProfile_text">Status</string>
    <string name="displayName_text">Display Name</string>
    <string name="aboutMe_text">About Me</string>
    <string name="search_title">Search Bar</string>
    <string name="search_hint">Profile Search...</string>

</resources>