<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launchbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp313.LaunchActivity" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="30dp"       
        android:src="@drawable/text"
        android:layout_centerHorizontal="true" />
    
     <TextView
        android:id="@+id/tvLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"                
        android:layout_marginTop="7dp"  
        android:textSize="40sp"  
        android:textColor="@color/white"     
        android:layout_centerHorizontal="true"     
        android:text="@string/launch_header_text" />
     
     <TextView
        android:id="@+id/tvLogoMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogoText"                
        android:layout_marginTop="13dp"  
        android:textSize="18sp"  
        android:textColor="@color/white"     
        android:layout_centerHorizontal="true"     
        android:text="@string/launch_logo_text" />
     
       <Button
        android:id="@+id/btnLogin"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_below="@+id/tvLogoMoto"
        android:layout_marginTop="70dp" 
        android:background="#ededed"  
        android:onClick="callIntent"    
        android:layout_centerHorizontal="true"    
        android:text="@string/launch_btnLoginp_text" />
     
     <Button
        android:id="@+id/btnSignUp"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="40dp" 
        android:onClick="callIntent"
        android:background="#ededed"      
        android:layout_centerHorizontal="true"    
        android:text="@string/launch_btnsignup_text" />
     
   

</RelativeLayout>