<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alizarin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp313.RegistrationActivity" >

    <TextView
        android:id="@+id/tvLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_logotext_margintop"
        android:text="@string/launch_header_text"
        android:textColor="@color/white"
        android:textSize="@dimen/login_logotext_size" />

    <LinearLayout
        android:id="@+id/linearLayout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/register_layoutbody_top"
        android:layout_below="@+id/tvLogoText"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username_registration_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_username_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/register_username_marginleft"
            android:layout_marginRight="@dimen/register_username_marginright"
            android:layout_marginTop="@dimen/register_bodySpacing_top"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/register_username_text"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/email_registration_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_username_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/register_email_marginleft"
            android:layout_marginRight="@dimen/register_email_marginright"
            android:layout_marginTop="@dimen/register_textbox_top"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/register_email_text"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_registration_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_username_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/register_password_marginleft"
            android:layout_marginRight="@dimen/register_password_marginright"
            android:layout_marginTop="@dimen/register_textbox_top"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/register_password_text"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_registration_check_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/register_username_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/register_password_marginleft"
            android:layout_marginRight="@dimen/register_password_marginright"
            android:layout_marginTop="@dimen/register_textbox_top"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/register_password_check_text"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/submit_registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/register_btnsignin_marginbottom"
            android:layout_marginLeft="@dimen/register_btnsignin_marginleft"
            android:layout_marginRight="@dimen/register_btnsignin_marginright"
            android:layout_marginTop="@dimen/register_textbox_top"
            android:background="@drawable/buttonshape"
            android:text="@string/register_submit_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="0dp"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>