<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alizarin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp313.LoginActivity" >

    <TextView
        android:id="@+id/tvLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_logotext_margintop"
        android:text="@string/launch_header_text"
        android:textColor="@color/white"
        android:textSize="@dimen/login_logotext_size" />

    <LinearLayout
        android:id="@+id/linearLayout_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogoText"
        android:layout_marginTop="@dimen/login_layoutbody_top"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_username_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/login_username_marginleft"
            android:layout_marginRight="@dimen/login_username_marginright"
            android:layout_marginTop="@dimen/login_bodySpacing_top"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/login_username_text"
            android:inputType="textAutoComplete" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_password_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/login_password_marginleft"
            android:layout_marginRight="@dimen/login_password_marginright"
            android:layout_marginTop="@dimen/login_textbox_top"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/login_password_text"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_bodySpacing_top"
            android:button="@drawable/checkboxstyle"
            android:text="@string/login_rememberMe_text" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_btnlogin_marginbottom"
            android:layout_marginLeft="@dimen/login_btnlogin_marginleft"
            android:layout_marginRight="@dimen/login_btnlogin_marginright"
            android:background="@drawable/buttonshape"
            android:onClick="callIntent"
            android:text="@string/login_loginButton_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>