<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alizarin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp313.MainActivity" >
    
   <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_logo_top"
        android:src="@drawable/logo_home" />
    
    <TextView
        android:id="@+id/tvLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="@dimen/main_logotext_top"
        android:text="@string/main_header_text"
        android:textColor="@color/white"
        android:textSize="@dimen/main_logotext_size" />

    <TextView
        android:id="@+id/tvLogoMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogoText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_logomoto_top"
        android:text="@string/main_logo_text"
        android:textColor="@color/white"
        android:textSize="@dimen/main_logomoto_size" />
    
      <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogoMoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_welcometext_top"        
        android:textColor="@color/white"
        android:textSize="@dimen/main_logomoto_size" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="@dimen/main_enter_width"
        android:layout_height="@dimen/main_enter_height"
        android:layout_below="@+id/tvUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_enter_top"
        android:background="@color/buttonbackground"
        android:onClick="callIntent"
        android:text="@string/main_btnenter_text" />    

</RelativeLayout>